# panel

./: Cargo.toml
src/: clock.rs  main.rs  modal.rs  popup.rs  settings.rs  utils.rs
src/system/: audio.rs
