[package]
name = "panel"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus@eneman.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
libpulse-binding = { path = "../pulse-binding-rust/pulse-binding" }
tokio = "=0.2.0-alpha.4"
futures-util-preview = "=0.3.0-alpha.18"

[dependencies.futures-preview]
version = "=0.3.0-alpha.18"
features = ["nightly", "async-await"]

[dependencies.libpulse-futures]
# git = "https://github.com/Pajn/libpulse-futures"
path = "../dbus-futures"

[dependencies.gtk-layer-shell-rs]
git = "https://github.com/subgraph/gtk-layer-shell-rs"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
features = ["futures"]

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
features = ["v3_22"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[patch.crates-io]
glib = { git = "https://github.com/gtk-rs/glib" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
